# deepseek-ocr2-batch-rag

./: .gitignore  README.md  config.example.yaml  config_loader.py  gpu_manager.py  main.py  pathing.py  pipeline.py  pyproject.toml  scanner.py  worker.py
deepencoder/: __init__.py  clip_sdpa.py  sam_vary_sdpa.py
deepencoderv2/: sam_vary_sdpa.py
tests/: test_smoke_paths_and_scanner.py
